libgo: Use MAP_FIXED if necessary to grab arena.

From Rainer Orth.

	PR go/48240
	* configure.ac: Check for mincore.
	* configure: Regenerate.
	* config.h.in: Regenerate.
	* runtime/mem.c: Include unistd.h.
	(addrspace_free): New function.
	(runtime_SysMap): Retry 64-bit runtime_mmap with MAP_FIXED.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@171961 138bc75d-0d04-0410-961f-82ee72b054a4