libgo/runtime/mem.c
@@ -1,4 +1,5 @@
 #include <errno.h>
+#include <unistd.h>
 
 #include "runtime.h"
 #include "malloc.h"
@@ -15,6 +16,23 @@
 #ifdef USE_DEV_ZERO
 static int dev_zero = -1;
 #endif
+
+static _Bool
+addrspace_free(void *v __attribute__ ((unused)), uintptr n __attribute__ ((unused)))
+{
+#ifdef HAVE_MINCORE
+	size_t page_size = getpagesize();
+	size_t off;
+	char one_byte;
+
+	errno = 0;
+	for(off = 0; off < n; off += page_size)
+		if(mincore((char *)v + off, page_size, (void *)&one_byte) != -1
+		   || errno != ENOMEM)
+			return 0;
+#endif
+	return 1;
+}
 
 void*
 runtime_SysAlloc(uintptr n)
@@ -109,6 +127,11 @@ runtime_SysMap(void *v, uintptr n)
 	// On 64-bit, we don't actually have v reserved, so tread carefully.
 	if(sizeof(void*) == 8) {
 		p = runtime_mmap(v, n, PROT_READ|PROT_WRITE|PROT_EXEC, MAP_ANON|MAP_PRIVATE, fd, 0);
+		if(p != v && addrspace_free(v, n)) {
+			// On some systems, mmap ignores v without
+			// MAP_FIXED, so retry if the address space is free.
+			p = runtime_mmap(v, n, PROT_READ|PROT_WRITE|PROT_EXEC, MAP_ANON|MAP_FIXED|MAP_PRIVATE, fd, 0);
+		}
 		if(p != v) {
 			runtime_printf("runtime: address space conflict: map(%p) = %p\n", v, p);
 			runtime_throw("runtime: address space conflict");
